# mpmDemo

./: .gitignore  CMakeLists.txt  LICENSE.txt  readme.md
shader/: addCollisionObject.comp  addParticles.comp  collisionMap.frag  copyCollisionMap.comp  g2p.comp  gridUpdate.comp  kernel.glsl  p2g.comp  particleRenderer.frag  particleRenderer.vert  particleToGrid.frag  particleToGrid.vert
src/: main.cpp  mpmSolver2D.cpp  mpmSolver2D.h
